fix scrollbar height and width to 1.2em

--- a/Front/app/styles/ui/_grid.less
+++ b/Front/app/styles/ui/_grid.less
@@ -249,6 +249,11 @@
 .ag-error-highlight{
   background-color: rgba(251, 76, 5, 0.69);
 }
+.grid-view ::-webkit-scrollbar {
+  width: 1.2em;
+  height: 1.2em;
+  background: #302e2e;
+}
 
 #applyButton{
   font-weight: 500;
